--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,7 @@
 linux/* linguist-vendored
 windows/* linguist-vendored
 macos/* linguist-vendored
+ios/* linguist-vendored
+android/* linguist-vendored
+**/CMakeLists.txt linguist-vendored
+**/*.cmake linguist-vendored
