Update .gitattributes to mark additional file types as vendored

--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,11 @@ ios/* linguist-vendored
 android/* linguist-vendored
 **/CMakeLists.txt linguist-vendored
 **/*.cmake linguist-vendored
+*.cpp linguist-vendored
+*.cc linguist-vendored
+*.c linguist-vendored
+*.h linguist-vendored
+*.hpp linguist-vendored
+*.gradle linguist-vendored
+*.kt linguist-vendored
+*.swift linguist-vendored
